objects/Apttus_Config2__Incentive__c.object
<CustomObject>
    <fields>
        <fullName>Impacted_Approvals__c</fullName>
        <label>Impacted Approvals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minimum Incremental Growth</fullName>
                </value>
                <value>
                    <fullName>Minimum YOY Increase</fullName>
                </value>
                <value>
                    <fullName>Bridges</fullName>
                </value>
                <value>
                    <fullName>Short Term Trials</fullName>
                </value>
                <value>
                    <fullName>Deal Guidance</fullName>
                    <isActive>false</isActive>
                    <label>Deal Guidance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Incremental_override__c</fullName>
        <label>Minimum Incremental override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_YOY_override__c</fullName>
        <label>Minimum YOY override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Incentive</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__IncentiveCode__c</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__AutoApply__c</columns>
        <columns>Apttus_Config2__ContextType__c</columns>
        <columns>Apttus_Config2__IncentiveNumber__c</columns>
        <columns>Apttus_Config2__IncentiveNumberAuto__c</columns>
        <columns>Apttus_Config2__IncentiveNumberText__c</columns>
        <columns>Apttus_Config2__Sequence__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Apttus_Config2__Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All_Active_Promotions</fullName>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>NAME</columns>
        <columns>Apttus_Config2__IncentiveCode__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__AutoApply__c</columns>
        <columns>Apttus_Config2__RegionScope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Config2__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Promotions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__Rebates</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>Apttus_Config2__ApplicationMethod__c</columns>
        <columns>Apttus_Config2__UseType__c</columns>
        <columns>Apttus_Config2__EffectiveDate__c</columns>
        <columns>Apttus_Config2__ExpirationDate__c</columns>
        <columns>Apttus_Config2__ContextType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Apttus_Config2__AutoApply__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Config2__UseType__c</field>
            <operation>equals</operation>
            <value>Rebate</value>
        </filters>
        <filters>
            <field>Apttus_Config2__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Rebates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apttus_Config2__DateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT(ISNULL(Apttus_Config2__EffectiveDate__c)) &amp;&amp; NOT(ISNULL(Apttus_Config2__ExpirationDate__c)) &amp;&amp; Apttus_Config2__EffectiveDate__c &gt; Apttus_Config2__ExpirationDate__c, true, false)</errorConditionFormula>
        <errorMessage>Effective date cannot be greater then expiration date.</errorMessage>
    </validationRules>
</CustomObject>